--- a/src/main/webapp/WEB-INF/views/templates/journalIn.html
+++ b/src/main/webapp/WEB-INF/views/templates/journalIn.html
@@ -18,7 +18,7 @@
                             <label for="inputState" class="col-form-label">Discipline</label>
                             <select name="discipline" id="inputState" class="form-control" required>
                                 <option disabled selected value> --</option>
-                                <option th:each="discipline : ${teacherDisciplines}"
+                                <option th:each="discipline : ${disciplines}"
                                         th:value="${discipline.id}"
                                         th:text="${discipline.name}">
                                 </option>
