--- a/src/main/webapp/WEB-INF/views/templates/pupilAndParentPage.html
+++ b/src/main/webapp/WEB-INF/views/templates/pupilAndParentPage.html
@@ -11,7 +11,7 @@
     <div class="btn-group-lg text-center" role="group" aria-label="Basic example">
         <a class="btn btn-success" th:href="@{/index}">Main</a>
         <a class="btn btn-outline-secondary" th:href="@{/logout}">Logout</a>
-        <h2 class="mb-5 mt-3" th:text="${userText}"></h2>
+        <h2 class="mb-5 mt-3" th:text="${pageText}"></h2>
     </div>
     <div class="container my-5 ">
         <div class="row">
