fix delete aClass

--- a/src/main/webapp/WEB-INF/views/templates/listTeachers.html
+++ b/src/main/webapp/WEB-INF/views/templates/listTeachers.html
@@ -41,9 +41,9 @@
                             <td>
                                 <div class="form-group">
                                     <select class="form-control">
-                                        <option th:if="${disciplines.empty}">No Disciplines!</option>
+                                        <option th:if="${teacher.disciplines.empty}">No Disciplines!</option>
                                         <option
-                                                th:each="discipline : ${disciplines}"
+                                                th:each="discipline : ${teacher.disciplines}"
                                                 th:text="${discipline.name}">
                                         </option>
                                     </select>
